[gd_scene load_steps=6 format=3 uid="uid://caiycjnuu44ot"]

[ext_resource type="Script" uid="uid://c0juvxcmusljr" path="res://Data/Scenes/Menus/options_menu.gd" id="1_rvjcp"]
[ext_resource type="PackedScene" uid="uid://b8ekeg5p3v4lp" path="res://Data/Scenes/Menus/button.tscn" id="2_e4n7v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e4n7v"]
bg_color = Color(0.109804, 0.0823529, 0.0588235, 0.835294)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jpyv1"]
bg_color = Color(0.117694, 0.0731033, 0.0513219, 1)
corner_radius_top_left = 10
corner_radius_top_right = 2
corner_radius_bottom_right = 10
corner_radius_bottom_left = 2
corner_detail = 1
expand_margin_left = 20.0
expand_margin_top = 5.0
expand_margin_right = 20.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lo80n"]
bg_color = Color(0.237551, 0.1858, 0.095123, 0.701961)

[node name="OptionsMenu" type="MarginContainer"]
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.444
offset_bottom = 0.319977
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rvjcp")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e4n7v")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Title" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jpyv1")

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer/Title"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 32
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 25

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lo80n")

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Graphics" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "- Video -"
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Resulution"

[node name="Resolution" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
item_count = 2
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Fullcreen"

[node name="Fullscreen" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Sounds" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "- Audio -"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "SFX volume -"

[node name="SFXSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
min_value = -50.0
max_value = 50.0
value = -50.0

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Music volume -"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
min_value = -50.0
max_value = 50.0
value = -50.0

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Enable Music"

[node name="MuteMusic" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Controls" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "- Controls -"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ControlList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/ControlList"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/ControlList/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 18
text = "Move Up"
vertical_alignment = 1

[node name="move_up" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/ControlList/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
placeholder_text = "..."
alignment = 1
editable = false
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/ControlList"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/ControlList/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 18
text = "Move Down"
vertical_alignment = 1

[node name="move_down" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/ControlList/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
placeholder_text = "..."
alignment = 1
editable = false
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/ControlList"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/ControlList/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 18
text = "Move Left"
vertical_alignment = 1

[node name="move_left" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/ControlList/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
placeholder_text = "..."
alignment = 1
editable = false
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/ControlList"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/ControlList/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 18
text = "Move Right"
vertical_alignment = 1

[node name="move_right" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/ControlList/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
placeholder_text = "..."
alignment = 1
editable = false
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="HBoxContainer6" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/ControlList"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/ControlList/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 18
text = "Attack"
vertical_alignment = 1

[node name="shoot" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/ControlList/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
placeholder_text = "..."
alignment = 1
editable = false
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="HBoxContainer5" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/ControlList"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/ControlList/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 18
text = "Pause"
vertical_alignment = 1

[node name="pause" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/ControlList/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
placeholder_text = "..."
alignment = 1
editable = false
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="Buttons" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="Back" parent="Buttons" instance=ExtResource("2_e4n7v")]
unique_name_in_owner = true
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 192.0
offset_top = 512.0
offset_right = 384.0
offset_bottom = 576.0
grow_horizontal = 1
grow_vertical = 1

[node name="MarginContainer" parent="Buttons/Back" index="0"]
offset_right = 192.0

[node name="Button" parent="Buttons/Back/MarginContainer/PanelContainer" index="0"]
text = "Back"

[node name="Apply" parent="Buttons" instance=ExtResource("2_e4n7v")]
unique_name_in_owner = true
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 576.0
offset_top = 512.0
offset_right = 768.0
offset_bottom = 576.0
grow_horizontal = 1
grow_vertical = 1

[node name="MarginContainer" parent="Buttons/Apply" index="0"]
offset_right = 192.0

[node name="Button" parent="Buttons/Apply/MarginContainer/PanelContainer" index="0"]
text = "Apply"

[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer/Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer3/VBoxContainer/HBoxContainer3/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3/MuteMusic" to="." method="_on_mute_music_toggled"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/ControlList/HBoxContainer/move_up" to="." method="_on_ctrl_up_focus_entered"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/ControlList/HBoxContainer2/move_down" to="." method="_on_ctrl_down_focus_entered"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/ControlList/HBoxContainer3/move_left" to="." method="_on_ctrl_left_focus_entered"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/ControlList/HBoxContainer4/move_right" to="." method="_on_ctrl_right_focus_entered"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/ControlList/HBoxContainer6/shoot" to="." method="_on_ctrl_attack_focus_entered"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MarginContainer2/ControlList/HBoxContainer5/pause" to="." method="_on_ctrl_pause_focus_entered"]

[editable path="Buttons/Back"]
[editable path="Buttons/Apply"]
